<resources>
    <string name="app_name">TipCalculator</string>
    <string name="billTotalLabel">Bill Total:</string>
    <string name="billTotal"></string>
    <string name="billHint">Enter Bill Value</string>
    <string name="tipPercentLabel">Tip %:</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="eighteenPercent">18%</string>
    <string name="customPercent">Custom</string>
    <string name="customLabel">Custom:</string>
    <string name="percentLabel">20%</string>
    <string name="tipTotalLabel">Tip:</string>
    <string name="tipTotal"></string>
    <string name="finalTotalLabel">Total:</string>
    <string name="finalTotal"></string>
    <string name="exitLabel">Exit</string>

</resources>